[package]
name = "remote_image_viewer"
version = "0.1.0"
authors = ["chris <chris.groot2004@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum_session = { version = "0.20.1", optional = true }
axum_session_auth = { version = "0.20.0", optional = true }
axum_session_sqlx = { version = "0.10.0", optional = true }
bcrypt = { version = "0.19.1", optional = true }
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
dotenvy = { version = "0.15.7", optional = true }
reqwest = { version = "0.13.4", optional = true }
serde = "1.0.228"
sqlx = { version = "0.9.0", features = [
    "postgres",
    "runtime-tokio",
], optional = true }
thiserror = "2.0.18"
tokio = "1.52.3"
toml = "1.1.2"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
    "dioxus/server",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:bcrypt",
    "dep:dotenvy",
    "dep:reqwest",
    "dep:sqlx",
]
